--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<html>
-<head>
-<title>Hello</title>
-<style>
-h1{
-color:red;
-}
-</style>
-<script>
-document.write("<br>hello");
-</script>
-</head>
-<body>
-<h1>
-hello this is my first git hosting
-</h1>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Hello</title>
+    
+  </head>
+  <body>
+    <h1>
+      <p id = "demo"></p>
+      <br>
+      welcome
+    </h1>
+    <script src="index.js">
+
+    </script>
+  </body>
 </html>
