--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Hello</title>
-    
+
   </head>
   <body>
     <h1>
+      <p id = 'time'></p>
       <p id = "demo"></p>
       <br>
       welcome
     </h1>
+    <img src="1.svg" alt="" width='100%'>
+    <p>Visual Studio Code is a lightweight but powerful source code editor which runs on your desktop and is available for Windows, macOS and Linux. It comes with built-in support for JavaScript, TypeScript and Node.js and has a rich ecosystem of extensions for other languages (such as C++, C#, Java, Python, PHP, Go) and runtimes (such as .NET and Unity). Begin your journey with VS Code with these introductory videos</p>
     <script src="index.js">
 
     </script>
