--- a/index.html
+++ b/index.html
@@ -1,21 +1,96 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Hello</title>
+<html lang="en">
 
-  </head>
-  <body>
-    <h1>
-      <p id = 'time'></p>
-      <p id = "demo"></p>
-      <br>
-      welcome
-    </h1>
-    <img src="1.svg" alt="" width='100%'>
-    <p>Visual Studio Code is a lightweight but powerful source code editor which runs on your desktop and is available for Windows, macOS and Linux. It comes with built-in support for JavaScript, TypeScript and Node.js and has a rich ecosystem of extensions for other languages (such as C++, C#, Java, Python, PHP, Go) and runtimes (such as .NET and Unity). Begin your journey with VS Code with these introductory videos</p>
-    <script src="index.js">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anand_Tagatghar | Home</title>
+    <link rel="stylesheet" href="myStyle.css">
+</head>
 
-    </script>
-  </body>
+<body>
+  <!-- navigation part  -->
+
+  <nav class="navigation">
+      <div class="container">
+          <div class="brandName">@Anand_Tagatghar</div>
+          <ul class="un-bulleted-list inline-lists">
+              <li>
+                  <a class="links active" href="/">Home</a>
+              </li>
+              <li>
+                  <a class="links" href="pages/projects.html">Projects</a>
+              </li>
+              <li>
+                  <a class="links" href="pages/blogs.html">Blogs</a>
+              </li>
+          </ul>
+      </div>
+  </nav>
+
+  
+    <!-- hero part -->
+
+    <header class="container hero container-center">
+        <img class="hero-img" src="images/1.svg" alt="hero-image">
+        <h1 class="hero-heading container-center" >Anand Tagatghar <span class="inverted-heading">looking for job</span> as a fresher</h1>
+    </header>
+
+    <!-- section part -->
+
+    <section class="section off-white">
+        <h2 class="section-heading">Technologies</h2>
+        <div class="container container-center">
+            <p>
+                I am familiar with HTML5, CSS3, Git, Javascript, Node.js, React.js, Java, Dart, Flutter and Web Hosting.
+            </p>
+        </div>
+    </section>
+    <section class="section ">
+        <h2 class="section-heading">Projects</h2>
+        <div class="container container-center">
+            <p>I like to showcase my work and thus, you can checkout my projects hosted online </p>
+            <a class="links primary-button" href="pages/projects.html">Browse Projects</a>
+        </div>
+    </section>
+    <section class="section off-white">
+        <h2 class="section-heading">Blogs</h2>
+        <div class="container container-center">
+            <p>I have written some technical blogs on Git, Javascript and other technologies.</p>
+            <a class="links primary-button" href="pages/blogs.html">Browse Blogs</a>
+        </div>
+    </section>
+
+    <!-- footer part  -->
+
+    <footer class="footer">
+        <section class="section">
+            <h2 class="heading">Connect me on</h2>
+            <ul class="un-bulleted-list inline-lists ">
+                <li>
+                    <a class="links social-icons" href="https://github.com/">
+                        <img src="images/icons/github.svg" alt="github">
+                    </a>
+                </li>
+                <li>
+                    <a class="links social-icons" href="https://www.linkedin.com/in/">
+                        <img src="images/icons/linkedin.svg" alt="linkedin">
+                    </a>
+                </li>
+                <li>
+                    <a class="links social-icons" href="https://twitter.com/">
+                        <img src="images/icons/twitter.svg" alt="twitter">
+                    </a>
+                </li>
+                <li>
+                    <a class="links social-icons" href="https://www.instagram.com/">
+                        <img src="images/icons/instagram.svg" alt="instagram">
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </footer>
+
+</body>
+
 </html>
