--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       </div>
   </nav>
 
-  
+
     <!-- hero part -->
 
-    <header class="container hero container-center">
-        <img class="hero-img" src="images/1.svg" alt="hero-image">
+    <header class="container hero">
+        <img class="hero-img" src="images/1.svg" alt="hero-image" style = 'padding-top: 2rem;padding-bottom:2rem'>
         <h1 class="hero-heading container-center" >Anand Tagatghar <span class="inverted-heading">looking for job</span> as a fresher</h1>
     </header>
 
@@ -42,14 +42,14 @@
         <h2 class="section-heading">Technologies</h2>
         <div class="container container-center">
             <p>
-                I am familiar with HTML5, CSS3, Git, Javascript, Node.js, React.js, Java, Dart, Flutter and Web Hosting.
+                I am familiar with HTML5, CSS3, Git, Javascript,core Java, python with django framework and Web Hosting.
             </p>
         </div>
     </section>
     <section class="section ">
         <h2 class="section-heading">Projects</h2>
         <div class="container container-center">
-            <p>I like to showcase my work and thus, you can checkout my projects hosted online </p>
+            <p>I like to showcase my work and thus, you can checkout my projects hosted online<br><small>click below to check projects</small> </p>
             <a class="links primary-button" href="pages/projects.html">Browse Projects</a>
         </div>
     </section>
@@ -68,12 +68,12 @@
             <h2 class="heading">Connect me on</h2>
             <ul class="un-bulleted-list inline-lists ">
                 <li>
-                    <a class="links social-icons" href="https://github.com/">
+                    <a class="links social-icons" href="https://github.com/AnandTagatghar">
                         <img src="images/icons/github.svg" alt="github">
                     </a>
                 </li>
                 <li>
-                    <a class="links social-icons" href="https://www.linkedin.com/in/">
+                    <a class="links social-icons" href="https://www.linkedin.com/in/tagatghar-anand-kumar-958b46206/">
                         <img src="images/icons/linkedin.svg" alt="linkedin">
                     </a>
                 </li>
