--- a/pages/projects.html
+++ b/pages/projects.html
@@ -40,9 +40,9 @@
         <h2 class="section-heading"> CheckTimeOfAnyZone</h2>
         <div class="container container-center">
             <p>A App that you can check day and time of any time zone(anand :))</p>
-            <a class="links primary-button" href="https://repl.it/@robinhooda/DoYouKnowMeQuizz?embed=1&output=1">View
+            <a class="links primary-button" href="https://objective-gates-1553df.netlify.app">View
                 Project</a>
-            <a class="links secondary-button" href="https://github.com/robinhooda/DoYouKnowMe_CLI_App">View Source
+            <a class="links secondary-button" href="https://github.com/AnandTagatghar/CheckDateAndTime">View Source
                 Code</a>
         </div>
     </section>
