--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                   <a class="links active" href="/">Home</a>
               </li>
               <li>
-                  <a class="links" href="pages/projects.html">Projects</a>
+                  <a class="links" href="https://tagatghar024anand.netlify.app/#projects">Projects</a>
               </li>
               <li>
-                  <a class="links" href="pages/blogs.html">Blogs</a>
+                  <a class="links" href="https://tagatghar024anand.netlify.app/#About">About</a>
               </li>
           </ul>
       </div>
@@ -42,7 +42,7 @@
         <h2 class="section-heading">Technologies</h2>
         <div class="container container-center">
             <p>
-                I am familiar with HTML5, CSS3, Git, Javascript,core Java, python with django framework and Web Hosting.
+                I am familiar with HTML5, CSS3, Git, Javascript,core Java, spring boot, python with django framework and Web Hosting.
             </p>
         </div>
     </section>
@@ -50,16 +50,16 @@
         <h2 class="section-heading">Projects</h2>
         <div class="container container-center">
             <p>I like to showcase my work and thus, you can checkout my projects hosted online<br><small>click below to check projects</small> </p>
-            <a class="links primary-button" href="pages/projects.html">Browse Projects</a>
+            <a class="links primary-button" href="https://tagatghar024anand.netlify.app/#projects">Browse Projects</a>
         </div>
     </section>
     <section class="section off-white">
-        <h2 class="section-heading">Blogs</h2>
+        <h2 class="section-heading">About</h2>
         <div class="container container-center">
-            <p>I have written some technical blogs on Git, Javascript and other technologies.</p>
-            <a class="links primary-button" href="pages/blogs.html">Browse Blogs</a>
+            <p>I am looking for an opertunity as a fresher as a full stack software developer.</p>
+            <a class="links primary-button" href="https://tagatghar024anand.netlify.app/#About">Browse About</a>
         </div>
-    </section> 
+    </section>
 
     <!-- footer part  -->
 
@@ -77,13 +77,9 @@
                         <img src="images/icons/linkedin.svg" alt="linkedin">
                     </a>
                 </li>
+                
                 <li>
-                    <a class="links social-icons" href="https://twitter.com/">
-                        <img src="images/icons/twitter.svg" alt="twitter">
-                    </a>
-                </li>
-                <li>
-                    <a class="links social-icons" href="https://www.instagram.com/">
+                    <a class="links social-icons" href="https://www.instagram.com/anand">
                         <img src="images/icons/instagram.svg" alt="instagram">
                     </a>
                 </li>
